k8s/ingress/app-production.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kubeapp-production
spec:
  replicas: 3
  template:
    metadata:
      name: kubeapp
      labels:
        app: kubeapp
        env: production
    spec:
      containers:
      - name: kubeapp
        image: shreyasgune/canaryk8:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        command: ["/app"]
        ports:
        - name: kubeapp
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kubeapp-production-service
  labels:
    app: kubeapp
    env: production
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubeapp
    env: production
